--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "node build.mjs",
     "watch": "node watch.mjs",
     "serve": "node serve.mjs",
-    "test": "jest"
+    "mocha": "mocha",
+    "jasmine": "jasmine",
+    "jest": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,8 +28,11 @@
   "homepage": "https://github.com/capnregex/test-component#readme",
   "devDependencies": {
     "esbuild": "0.19.5",
-    "esbuild-sass-plugin": "^2.16.0"
-  },
-  "dependencies": {
+    "esbuild-sass-plugin": "^2.16.0",
+    "expect.js": "^0.3.1",
+    "jasmine": "^5.1.0",
+    "jest": "^29.7.0",
+    "mocha": "^10.2.0",
+    "selenium-webdriver": "^4.15.0"
   }
 }
